<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_keys_layout"
    android:layout_width="284dp"
    android:layout_height="204dp"
    android:background="@drawable/morekeys_ar_13"
    android:orientation="vertical"
    android:padding="1dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        >

        <Button
            style="@style/morekeys_a"
            android:text="@string/a_12" />


        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:text="@string/a_11" />

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:text="@string/a_10" />

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:text="@string/a_9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" >

        <Button
            style="@style/morekeys_a"
            android:text="@string/a_8" />

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:text="@string/a_7" />

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:text="@string/a_6" />

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:text="@string/a_5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" >

          <Button
            style="@style/morekeys_a"
            android:text="@string/a_4" />


        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:text="@string/a_3" />

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:focusable="true"
            android:text="@string/a_2" />

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="6dp"
            android:text="@string/a_1" />
    </LinearLayout>

</LinearLayout>