<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_keys_layout"
    android:layout_width="224dp"
    android:layout_height="132dp"
    android:background="@drawable/morekeys_u"
    android:orientation="vertical"
    android:padding="1dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingTop="1dp"
       >

        <Button
            style="@style/morekeys"
            android:text="@string/ù" />

        <Button
            style="@style/morekeys"
            android:layout_marginLeft="8dp"
            android:focusable="true"
            android:text="@string/u" />

        <Button
            style="@style/morekeys"
            android:layout_marginLeft="8dp"
            android:text="@string/ü" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp" 
        android:paddingLeft="1dp">

        <Button
            style="@style/morekeys"
            android:text="@string/û" />

        <Button
            style="@style/morekeys"
            android:layout_marginLeft="8dp"
            android:text="@string/ú" />

        <Button
            style="@style/morekeys"
            android:layout_marginLeft="8dp"
            android:text="@string/ū" />
    </LinearLayout>

</LinearLayout>