<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_keys_layout"
    android:layout_width="212dp"
    android:layout_height="134dp"
    android:background="@drawable/morekeys_ar_5"
    android:orientation="vertical"
    android:padding="1dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
       >

        <Button
            style="@style/morekeys_a"
            android:text="@string/ﻷ" />

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="5dp"
            android:text="@string/ﻹ"/>

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:enabled="false"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp" 
        >

        <Button
            style="@style/morekeys_a"
            android:text="@string/ﻵ" />

        <Button
            style="@style/morekeys"
            android:layout_marginLeft="5dp"
            android:focusable="true"
            android:text="@string/ل"/>

        <Button
            style="@style/morekeys_a"
            android:layout_marginLeft="4dp"
            android:text="@string/لا" />
    </LinearLayout>

</LinearLayout>