<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_keys_layout"
    android:layout_width="224dp"
    android:layout_height="65dp"
    android:background="@drawable/morekeys_n"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2dp" 
        android:paddingLeft="1dp">

        <Button
            style="@style/morekeys"
            android:text="@string/Ñ" />

        <Button
            style="@style/morekeys"
            android:layout_marginLeft="8dp"
            android:focusable="true"
            android:text="@string/N" />

        <Button
            style="@style/morekeys"
            android:layout_marginLeft="9dp"
            android:text="@string/Ń" />
    </LinearLayout>

</LinearLayout>